@@ -4,6 +4,7 @@ Async HBase THANKS File
 The following persons contributed to the library by reporting problems,
 suggesting improvements, submitting patches or proofreading the code.
 
+Andrey Stepachev
 Arthur van Hoff
 Berk D. Demir
 Guo Sijie
