@@ -24,7 +24,7 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 NETTY_MAJOR_VERSION = 3.5
-NETTY_VERSION := 3.5.2.Final
+NETTY_VERSION := 3.5.9.Final
 NETTY := third_party/netty/netty-$(NETTY_VERSION).jar
 NETTY_BASE_URL := $(ASYNCHBASE_THIRD_PARTY_BASE_URL)
 
