@@ -5,6 +5,9 @@ HBase Async - User visible changes.
   - Fixed an RPC serialization bug when batching whole-row deletes.
     See issue #25.
   - Scanners can now scan multiple qualifiers at a time (#35).
+  - Upgraded to Netty 3.5.9 to avoid an IndexOutOfBoundsException
+    when deserializing a KeyValue with an empty qualifier or
+    value, under certain circumstances.
 
 * Version 1.3.2 (2012-07-10) [2af9f55]
 
